syntax = "proto3";

package account.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

service AuthService {
    rpc Login (LoginRequest) returns (LoginResponse) {
        option (google.api.http) = {
            post: "/api/v1/auth/login",
            body: "*"
        };
    }

    rpc RefreshToken (RefreshTokenRequest) returns (RefreshTokenResponse) {
        option (google.api.http) = {
            post: "/api/v1/auth/refresh",
            body: "*"
        };
    }
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
    string tokenExpiredAt = 2 [json_name="token_expired_at"];
    string refreshToken = 3 [json_name="refresh_token"];
    string refreshTokenExpiredAt = 4 [json_name="refresh_token_expired_at"];
}

message RefreshTokenRequest {
    string refreshToken = 1 [json_name="refresh_token"];
}

message RefreshTokenResponse {
    string token = 1;
    string tokenExpiredAt = 2 [json_name="token_expired_at"];
}